--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,9 @@ DB_USER=<DB_USER>
 DB_PASSWORD=<DB_PASSWORD>
 DB_HOST=<DB_HOST>
 DB_NAME=<DB_NAME>
+
+EMAIL_USER=rpralesh@gmail.com
+EMAIL_PASSWORD=<>
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
